# quant_trading

./: .gitignore  README.md  pyproject.toml  start_web.bat  start_web.ps1  stop_web.bat  stop_web.ps1
.github/workflows/: ci.yml
config/: settings.yaml
config/gateways/: ctp_simnow.yaml  ib.yaml
docs/: BEGINNER_GUIDE.md  TESTING_AND_SHOWCASE.md
notebooks/: 01_quickstart.ipynb
scripts/: demo_backtest.py  test_api.py  test_compare_api.py  test_new_modules.py
src/quant_trading/: __init__.py
src/quant_trading/alpha/: __init__.py  feature.py  model.py  predict_service.py  walkforward.py
src/quant_trading/alpha/models/: __init__.py
src/quant_trading/analysis/: __init__.py  metrics.py  signal_chart.py  visualization.py
src/quant_trading/backtest/: __init__.py  analyzer.py  engine.py  matching.py
src/quant_trading/core/: __init__.py  clock.py  config.py  engine.py  event.py  guardian.py  registry.py  scheduler.py
src/quant_trading/data/: __init__.py  adjust.py  engine.py  feed.py  pipeline.py  store.py  websocket_feed.py
src/quant_trading/data/providers/: __init__.py  akshare.py  yfinance.py
src/quant_trading/execution/: __init__.py  engine.py
src/quant_trading/gateway/: __init__.py  base.py  ctp.py  ibkr.py  paper.py  simulated.py
src/quant_trading/interface/: __init__.py  cli.py  services.py
src/quant_trading/model/: __init__.py  account.py  instrument.py  market.py  order.py  order_state.py  position.py
src/quant_trading/monitoring/: __init__.py  alert.py
src/quant_trading/portfolio/: __init__.py  manager.py
src/quant_trading/risk/: __init__.py  engine.py  position_sizer.py
src/quant_trading/strategy/: __init__.py  base.py  context.py  optimizer.py  runner.py
strategies/: example_dual_ma.py
tests/integration/: test_backtest_flow.py
tests/unit/: test_analyzer.py  test_backtest.py  test_data_store.py  test_event_bus.py  test_matching.py  test_models.py  test_portfolio.py  test_risk_engine.py  test_strategies.py
(+17 files in other folders)
