[project]
name = "quant-trading"
version = "0.1.0"
description = "A modular, event-driven quantitative trading system supporting multi-market and multi-strategy."
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "uvloop>=0.19; sys_platform != 'win32'",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "ib-insync>=0.9.86",
    "fastapi>=0.137.0",
    "uvicorn[standard]>=0.49.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
data = [
    "akshare>=1.14",
    "yfinance>=0.2",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.5",
    "joblib>=1.3",
    "torch>=2.0",
]
gateway = [
    "openctp-ctp>=6.7",
    "ib_insync>=0.9",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
]
viz = [
    "plotly>=5.0",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.8",
]
all = [
    "quant-trading[data,ml,web,viz,notebook,gateway,dev]",
]

[project.scripts]
quant = "quant_trading.interface.cli:main"
quant-web = "quant_trading.interface.web.app:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_trading"]

[tool.hatch.build.targets.wheel.force-include]
"src/quant_trading/interface/web/static" = "quant_trading/interface/web/static"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/quant_trading/alpha/*" = ["N803", "N806"]
"src/quant_trading/gateway/ctp.py" = ["N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
